[gd_scene load_steps=5 format=3 uid="uid://o7wxb7v0a732"]

[ext_resource type="Script" path="res://Scenes/Spawners/ResourceSpawners/leaves_spawner.gd" id="1_0vfpw"]
[ext_resource type="PackedScene" uid="uid://b6imdyagxnjg7" path="res://Scenes/Resources/resource.tscn" id="2_v18x2"]
[ext_resource type="Texture2D" uid="uid://cpn7xhea6ecfv" path="res://Assets/Buildings/EnemyBuildings/hole-spawner.png" id="3_veqyd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mkbv"]
size = Vector2(64, 64)

[node name="LeavesSpawner" type="Area2D" groups=["Obstruction"]]
script = ExtResource("1_0vfpw")
resource_scene = ExtResource("2_v18x2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5mkbv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("3_veqyd")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
